Shifted to polybar, removed conky and latte dock.

--- a/BrisbaneSnow/kitty.conf
+++ b/BrisbaneSnow/kitty.conf
@@ -22,7 +22,7 @@ font_family        Inconsolata
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 9
+font_size 10
 
 #: Font size (in pts)
 
@@ -345,7 +345,7 @@ inactive_tab_font_style normal
 #: Color scheme {{{
 
 foreground #9d72dd
-background #222
+background #f1f1f1
 
 #: The foreground and background colors
 
@@ -374,7 +374,7 @@ dynamic_background_opacity no
 #: means no dimming and zero means fully dimmed (i.e. invisible).
 
  selection_foreground #222
- selection_background #3a404e
+ selection_background #aaa
 
 #: The foreground and background for text selected with the mouse
 
@@ -383,29 +383,29 @@ dynamic_background_opacity no
 #: dull and bright version. You can also set the remaining colors from
 #: the 256 color table as color16 to color255.
 
- color0 #222222
- color8 #444444
+ color0 #666
+ color8 #666
 
 #: black
 
- color1 #EC4E20
+ color1 #ee6137
  color9 #eb772f
 
 #: red
 
- color2  #999
+ color2  #666
  color10 #999
 
 #: system text
 
- color3  #e8bd3f
+ color3  #ecb420
  color11 #F18F01
 
 #: yellow
 
 # color4  #1793D1
  color4  #444
- color12 #1173a3
+ color12 #daa91a
 
 #: blue
 
@@ -414,8 +414,8 @@ dynamic_background_opacity no
 
 #: magenta
 
- color6  #1d868b
- color14 #26afb5
+ color6  #4ca7a7
+ color14 #7fbfbf
 
 #: symlinks
 
