--- a/SpringSunset/polybar/config
+++ b/SpringSunset/polybar/config
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #E6111111
+background = #e6111111
 background-alt = #444
 foreground = #9fc3c13d
 ;foreground = #ff32704b
@@ -28,7 +28,7 @@ primary = #ffb52a
 ;secondary = #ee6137
 secondary = ${xrdb:c1:#f44}
 alert = #bd2c40
-rad = 4
+rad = 0
 
 [bar/left]
 monitor = DP-1
@@ -64,7 +64,7 @@ modules-left = ewmh filesystem wlan
 modules-right =  
 
 tray-position = left
-tray-transparent = true
+tray-transparent = false
 tray-background = #0063ff
 
 wm-restack = i3
@@ -73,6 +73,7 @@ override-redirect = true
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
 
 [bar/right]
 monitor = DP-1
@@ -107,7 +108,7 @@ modules-left =
 modules-center = 
 modules-right = pulseaudio memory cpu temperature 
 
-tray-position = left
+tray-position = 
 tray-transparent = true
 tray-background = #0063ff
 
@@ -117,6 +118,9 @@ override-redirect = true
 
 cursor-click = pointer
 cursor-scroll = ns-resize
+
+scroll-up = i3-msg workspace next_on_output
+scroll-down = i3-msg workspace prev_on_output
 
 [bar/center]
 monitor = DP-1
@@ -151,7 +155,7 @@ modules-left =
 modules-center = date
 modules-right =  
 
-tray-position = left
+tray-position = 
 tray-transparent = true
 tray-background = #0063ff
 
@@ -250,18 +254,18 @@ cursor-scroll = ns-resize
 
 [module/ewmh]
 type = internal/xworkspaces
-enable-click = true
-enable-scroll = false
+enable-click = false
+enable-scroll = true
 
 ; Formatting
 ; icon-[0-9]+ = <desktop-name>;<icon>
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1; 
+icon-0 = 1; 
 icon-1 = 2; 
 icon-2 = 3; 
-icon-default = 
+icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
@@ -454,7 +458,7 @@ label-connected =  %signal%% %downspeed:1:10%
 format-disconnected = <label-disconnected>
 format-disconnected-overline = ${self.format-connected-overline}
 label-disconnected =  
-label-disconnected-foreground = #9d9d9d
+label-disconnected-foreground = ${colors.primary}
 
 ramp-signal-0 =
 ramp-signal-1 =
