--- a/SpringSunset/ranger/rc.conf
+++ b/SpringSunset/ranger/rc.conf
@@ -110,7 +110,7 @@ set preview_images_method w3m
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
-set w3m_delay 0.02
+# set w3m_delay 0.02
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
@@ -121,7 +121,7 @@ set unicode_ellipsis false
 
 # BIDI support - try to properly display file names in RTL languages (Hebrew, Arabic).
 # Requires the python-bidi pip package
-set bidi_support false
+# set bidi_support false
 
 # Show dotfiles in the bookmark preview box?
 set show_hidden_bookmarks true
@@ -150,7 +150,7 @@ set draw_progress_bar_in_status_bar true
 # Separators are vertical lines between columns.
 # Outline draws a box around all the columns.
 # Both combines the two.
-set draw_borders none
+# set draw_borders none
 
 # Display the directory name in tabs?
 set dirname_in_tabs false
@@ -163,7 +163,7 @@ set display_size_in_main_column true
 set display_size_in_status_bar true
 
 # Display the free disk space in the status bar?
-set display_free_space_in_status_bar true
+# set display_free_space_in_status_bar true
 
 # Display files tags in all columns or only in main column?
 set display_tags_in_all_columns true
@@ -172,14 +172,14 @@ set display_tags_in_all_columns true
 set update_title false
 
 # Set the title to "ranger" in the tmux program?
-set update_tmux_title true
+set update_tmux_title false
 
 # Shorten the title if it gets long?  The number defines how many
 # directories are displayed at once, 0 turns off this feature.
 set shorten_title 3
 
 # Show hostname in titlebar?
-set hostname_in_titlebar true
+set hostname_in_titlebar false
 
 # Abbreviate $HOME with ~ in the titlebar (first line) of ranger?
 set tilde_in_titlebar true
@@ -202,11 +202,11 @@ set padding_right true
 # This helps to synchronize bookmarks between multiple ranger
 # instances but leads to *slight* performance loss.
 # When false, bookmarks are saved when ranger is exited.
-set autosave_bookmarks true
+set autosave_bookmarks false
 
 # Save the "`" bookmark to disk.  This can be used to switch to the last
 # directory by typing "``".
-set save_backtick_bookmark true
+set save_backtick_bookmark false
 
 # You can display the "real" cumulative size of directories by using the
 # command :get_cumulative_size or typing "dc".  The size is expensive to
@@ -246,7 +246,7 @@ set preview_max_size 0
 
 # The key hint lists up to this size have their sublists expanded.
 # Otherwise the submaps are replaced with "...".
-set hint_collapse_threshold 10
+# set hint_collapse_threshold 10
 
 # Add the highlighted file to the path in the titlebar
 set show_selection_in_titlebar true
@@ -270,7 +270,7 @@ set line_numbers false
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
-set relative_current_zero false
+# set relative_current_zero false
 
 # Start line numbers from 1 instead of 0
 set one_indexed false
