Updated polybar, added ranger config

--- a/Vapor/polybar/config
+++ b/Vapor/polybar/config
@@ -476,7 +476,7 @@ label = %date%
 type = internal/date
 interval = 5
 
-time = %H:%M  
+time = %H:%M  
 
 label = %time%
 label-foreground = ${colors.alert}
